--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,8 @@
 
 <table>
   <tr>
+    <th>id</th>
+    <th>Name</th>
     <th></th>
     <th></th>
     <th></th>
@@ -9,6 +11,9 @@
 
 <% @users.each do |user| %>
   <tr>
+    <td><%= user.id %></td>
+    <td><%= user.name %></td>
+    <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, confirm: 'Are you sure?', method: :delete %></td>
