retreiving and showing all needed data

--- a/app/views/facebooks/show.html.erb
+++ b/app/views/facebooks/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
 
+<h1> Time Taken: <%= @time_taken %> </h1>
 
-<%= link_to 'Edit', edit_facebook_path(@facebook) %> |
-<%= link_to 'Back', facebooks_path %>
+<%= debug @result %>
