--- a/app/views/facebooks/show.html.erb
+++ b/app/views/facebooks/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
+<h1> Thank You for conencting. You have successfully entered to win a $100 Amazon gift card <h1>
 
-<h1> Time Taken: <%= @time_taken %> </h1>
-
-<%= debug @result %>
+<%#= debug @result %>
